// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline Card media > should match the snapshot ( IMAGE ) 1`] = `
<div>
  <div
    class="sc-bdnyFh drGskx card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-fujznN bcWids"
      height="200"
    >
      <img
        alt="Image"
        class="sc-gtsqUy iGEhwZ"
        loading="lazy"
        mode="VERTICAL_ALTERNATING"
        role="img"
        src="https://picsum.photos/200/300"
      />
    </div>
  </div>
  <div
    class="sc-hKFymg ipgojp"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-iCoHzw iYFQgC"
    />
    <h2
      class="sc-kEqXeH eONvrL card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;

exports[`Timeline Card media > should match the snapshot ( VIDEO ) 1`] = `
<div>
  <div
    class="sc-bdnyFh drGskx card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
      allowfullscreen=""
      class="sc-jSFipO fjfoTV"
      frameborder="0"
      src="https://www.youtube.com/watch?v=9bZkp7q19f0?enablejsapi=1"
      title="Video"
    />
  </div>
  <div
    class="sc-hKFymg ipgojp"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-iCoHzw iYFQgC"
    />
    <h2
      class="sc-kEqXeH eONvrL card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;
